[gd_scene load_steps=11 format=3 uid="uid://dokxbayunkgwo"]

[ext_resource type="Texture2D" uid="uid://b2kpqy7l0eoni" path="res://Assets/icon.svg" id="1_1gjae"]
[ext_resource type="Script" path="res://Scenes/InitMenu.gd" id="2_ioxfu"]
[ext_resource type="Theme" uid="uid://08hv88tc1qqh" path="res://Fonts/ApfelTheme.tres" id="2_ksiif"]
[ext_resource type="Script" path="res://Scripts/create_proj.gd" id="2_qxyfr"]
[ext_resource type="StyleBox" uid="uid://co1mcfxjjtg57" path="res://Assets/buttonSBoxClick.tres" id="3_0tcee"]
[ext_resource type="StyleBox" uid="uid://jjq6i5iwgye" path="res://Assets/buttonSBoxNorm.tres" id="4_7btr2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vpi5q"]
bg_color = Color(0.101961, 0.101961, 0.101961, 1)
border_color = Color(0.820411, 0.360244, 0.360664, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_71f0l"]
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o864c"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.820615, 0.823177, 0.513654, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 8.0
expand_margin_right = 8.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g25l6"]
border_width_bottom = 5
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 8.0
expand_margin_right = 8.0

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.101961, 0.101961, 0.101961, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer2/CenterContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
texture = ExtResource("1_1gjae")
expand_mode = 3
stretch_mode = 4

[node name="Main" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10
script = ExtResource("2_ioxfu")

[node name="AcceptDialog" type="AcceptDialog" parent="MarginContainer/VBoxContainer2/Main"]

[node name="DirDialog" type="FileDialog" parent="MarginContainer/VBoxContainer2/Main"]
auto_translate_mode = 1
title = "Open a Directory"
size = Vector2i(303, 180)
ok_button_text = "Select Current Folder"
dialog_hide_on_ok = true
file_mode = 2
access = 2
use_native_dialog = true

[node name="NewBtn" type="Button" parent="MarginContainer/VBoxContainer2/Main"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("2_ksiif")
theme_override_styles/hover_pressed = ExtResource("3_0tcee")
theme_override_styles/hover = ExtResource("4_7btr2")
theme_override_styles/pressed = ExtResource("3_0tcee")
theme_override_styles/normal = ExtResource("4_7btr2")
text = "New Project"

[node name="OpenBtn" type="Button" parent="MarginContainer/VBoxContainer2/Main"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("2_ksiif")
theme_override_styles/hover_pressed = ExtResource("3_0tcee")
theme_override_styles/hover = ExtResource("4_7btr2")
theme_override_styles/pressed = ExtResource("3_0tcee")
theme_override_styles/normal = ExtResource("4_7btr2")
text = "Open Project"

[node name="CreateProj" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10
script = ExtResource("2_qxyfr")

[node name="AcceptDialog" type="AcceptDialog" parent="MarginContainer/VBoxContainer2/CreateProj"]
initial_position = 1
size = Vector2i(400, 200)
unresizable = true
force_native = true
theme = ExtResource("2_ksiif")
theme_override_styles/panel = SubResource("StyleBoxFlat_vpi5q")
dialog_text = "This is a descriptive error message!"

[node name="DirDialog" type="FileDialog" parent="MarginContainer/VBoxContainer2/CreateProj"]
title = "Open a Directory"
size = Vector2i(303, 180)
ok_button_text = "Select Current Folder"
dialog_hide_on_ok = true
file_mode = 2
access = 2
use_native_dialog = true

[node name="RomDialog" type="FileDialog" parent="MarginContainer/VBoxContainer2/CreateProj"]
auto_translate_mode = 1
title = "Open a File"
size = Vector2i(303, 180)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
use_native_dialog = true

[node name="RomLabel" type="Label" parent="MarginContainer/VBoxContainer2/CreateProj"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme = ExtResource("2_ksiif")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_71f0l")
text = "Rom"

[node name="RomDialogBtn" type="Button" parent="MarginContainer/VBoxContainer2/CreateProj"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("2_ksiif")
theme_override_styles/hover_pressed = ExtResource("3_0tcee")
theme_override_styles/hover = ExtResource("4_7btr2")
theme_override_styles/pressed = ExtResource("3_0tcee")
theme_override_styles/normal = ExtResource("4_7btr2")
text = "Pick Rom"

[node name="NameEdit" type="LineEdit" parent="MarginContainer/VBoxContainer2/CreateProj"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 1
theme = ExtResource("2_ksiif")
theme_override_styles/focus = SubResource("StyleBoxFlat_o864c")
theme_override_styles/normal = SubResource("StyleBoxFlat_g25l6")
text = "MyProject"
placeholder_text = "ProjectName"
expand_to_text_length = true

[node name="CreateBtn" type="Button" parent="MarginContainer/VBoxContainer2/CreateProj"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("2_ksiif")
theme_override_styles/hover_pressed = ExtResource("3_0tcee")
theme_override_styles/hover = ExtResource("4_7btr2")
theme_override_styles/pressed = ExtResource("3_0tcee")
theme_override_styles/normal = ExtResource("4_7btr2")
text = "Create
"

[node name="BackBtn" type="Button" parent="MarginContainer/VBoxContainer2/CreateProj"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("2_ksiif")
theme_override_styles/hover_pressed = ExtResource("3_0tcee")
theme_override_styles/hover = ExtResource("4_7btr2")
theme_override_styles/pressed = ExtResource("3_0tcee")
theme_override_styles/normal = ExtResource("4_7btr2")
text = "Back
"

[connection signal="pressed" from="MarginContainer/VBoxContainer2/Main/NewBtn" to="MarginContainer/VBoxContainer2/CreateProj" method="open"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/Main/NewBtn" to="MarginContainer/VBoxContainer2/Main" method="close"]
[connection signal="dir_selected" from="MarginContainer/VBoxContainer2/CreateProj/DirDialog" to="MarginContainer/VBoxContainer2/CreateProj" method="onDirSelected"]
[connection signal="file_selected" from="MarginContainer/VBoxContainer2/CreateProj/RomDialog" to="MarginContainer/VBoxContainer2/CreateProj" method="onRomSelected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/CreateProj/RomDialogBtn" to="MarginContainer/VBoxContainer2/CreateProj" method="openRomDialog"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/CreateProj/CreateBtn" to="MarginContainer/VBoxContainer2/CreateProj" method="openDirDialog"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/CreateProj/BackBtn" to="MarginContainer/VBoxContainer2/CreateProj" method="close"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/CreateProj/BackBtn" to="MarginContainer/VBoxContainer2/Main" method="open"]
